Issue #2972418 by jwilson3: Feed item whitespace tweaks

--- a/css/components/feed-items.css
+++ b/css/components/feed-items.css
@@ -15,6 +15,7 @@ ul.feed-items {
 li.feed-item {
   margin-left: 0;
   padding-left: 0;
+  padding-bottom: 1.25rem;
 }
 
 li.feed-item::before,
@@ -30,6 +31,10 @@ li.feed-item > article::after {
   content: ' ';
   display: table;
   width: 100%;
+}
+
+.feed-item .media {
+  margin-bottom: 0;
 }
 
 .feed-item .media .media {
